# Patrins-OneClick

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json.backup  package.simple.json  tailwind.config.js
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/modules/: api.rs  apps.rs  browsers.rs  crypto.rs  files.rs  mod.rs  network.rs
src/components/Backup/: Dashboard.tsx
src/components/Restore/: RestoreMode.tsx
src/components/Welcome/: WelcomeScreen.tsx
src/store/: appStore.ts
src/styles/: globals.css
src/types/: index.ts
