[package]
name = "patrins-oneclick"
version = "1.0.0"
description = "Patrins OneClick Reset - Painless Windows Reset & Restore"
authors = ["Patrins"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [ "dialog-all", "path-all", "window-close", "window-start-dragging", "updater", "notification-all", "fs-all", "window-unminimize", "system-tray", "shell-open", "notification", "window-maximize", "window-minimize", "window-unmaximize", "window-hide", "window-show"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
sha2 = "0.10"
aes-gcm = "0.10"
argon2 = "0.5"
zstd = "0.13"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
walkdir = "2"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows = { version = "0.54", features = [
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_NetworkManagement_WiFi",
    "Win32_Security_Credentials",
] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
